--- a/User/UserPage.Master
+++ b/User/UserPage.Master
@@ -8,18 +8,17 @@
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
-<body style="background-color:lightpink">
+<body style="background-color:lightgreen">
     <h1 align="center">User Dashboard</h1>
     <header style="background-color:white" align="center">
-        <br />
-        
-        
-        <a href="../User/User.aspx">Home</a>&nbsp
-        <a href="../User/complaint.aspx">Complaint Registration</a>&nbsp
-        <a href="../User/Query.aspx">Query Registration</a>&nbsp
-        <a href="../User/productview.aspx">Product View </a>&nbsp
-        
-        
+        <br /><b>
+        <a href="../User/User.aspx" style="font-size:larger">Home</a>&nbsp&nbsp
+        <a href="../User/Complaint.aspx"style="font-size:larger">Complaint Registration</a>&nbsp&nbsp
+        <a href="../User/ComplaintStatus.aspx" style="font-size:larger">Complaint Status</a>&nbsp&nbsp
+        <a href="../User/QueryPage.aspx" style="font-size:larger">Query Registration</a>&nbsp&nbsp
+        <a href="../User/Query_Status.aspx" style="font-size:larger">Query Status</a>&nbsp&nbsp
+        <a href="../User/ProductView.aspx" style="font-size:larger">Product View </a>&nbsp&nbsp
+        <a href="../Guest/index.aspx" style="font-size:larger">Log Out </a>&nbsp&nbsp</b>
         <br />
         <br />
     </header>
